tests/specs/check/various_node_errors/check.out
Check [WILDCARD]main.ts
TS2307 [ERROR]: Cannot find module 'package/package.json' or its corresponding type declarations.
import * as test from "package/package.json";
                      ~~~~~~~~~~~~~~~~~~~~~~
    at file://[WILDCARD]/main.ts:1:23

TS2307 [ERROR]: Cannot find module '#not-an-import' or its corresponding type declarations.
import * as test2 from "#not-an-import";
                       ~~~~~~~~~~~~~~~~
    at file://[WILDCARD]/main.ts:2:24

TS2307 [ERROR]: Cannot find module '#non-existent' or its corresponding type declarations.
import * as test3 from "#non-existent";
                       ~~~~~~~~~~~~~~~
    at file://[WILDCARD]/main.ts:3:24

TS7016 [ERROR]: Could not find a declaration file for module 'package2/dir'. '[WILDCARD]/node_modules/package2/dir/index.js' implicitly has an 'any' type.
import * as test4 from "package2/dir"; // not allowed dir import
                       ~~~~~~~~~~~~~~
    at file://[WILDCARD]/main.ts:4:24

TS2307 [ERROR]: Cannot find module 'package3' or its corresponding type declarations.
import * as test5 from "package3"; // invalid package target
                       ~~~~~~~~~~
    at file://[WILDCARD]/main.ts:5:24

Found 5 errors.

error: Type checking failed.
